orchestration/v2/deploy/kubernetes/manifests/telegraf/operator/telegraf-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: telegraf-operator
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: telegraf-operator
  namespace: telegraf-operator
  labels:
    app: telegraf-operator
webhooks:
  - name: telegraf.influxdata.com
    # enable the example below to limit to namespaces with specific labels only
    # namespaceSelector:
    #   matchLabels:
    #     controller: telegraf-operator
    clientConfig:
      service:
        name: telegraf-operator
        namespace: telegraf-operator
        path: "/mutate-v1-pod"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUdIekNDQkFlZ0F3SUJBZ0lVQnBCMDJoYzAraFZwdlp4bnFLbmcyMk9OaENNd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2daNHhDekFKQmdOVkJBWVRBazVNTVJVd0V3WURWUVFJREF4YWRXbGtJRWh2Ykd4aGJtUXhFakFRQmdOVgpCQWNNQ1ZKdmRIUmxjbVJoYlRFYU1CZ0dBMVVFQ2d3UlUzQmhjbXRzYVc1bklFNWxkSGR2Y21zeEZqQVVCZ05WCkJBc01EVWxVSUVSbGNHRnlkRzFsYm5ReE1EQXVCZ05WQkFNTUozUmxiR1ZuY21GbUxXOXdaWEpoZEc5eUxuUmwKYkdWbmNtRm1MVzl3WlhKaGRHOXlMbk4yWXpBZUZ3MHlNREF6TWpjeE5URXpOVEJhRncwek1EQXpNalV4TlRFegpOVEJhTUlHZU1R [...]
    rules:
      - operations: ["CREATE", "DELETE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["pods"]
    failurePolicy: Ignore
    reinvocationPolicy: IfNeeded
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf-operator
  namespace: telegraf-operator
  labels:
    app: telegraf-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telegraf-operator
  template:
    metadata:
      labels:
        app: telegraf-operator
    spec:
      serviceAccountName: telegraf-operator
      containers:
        - name: controller
          image: quay.io/influxdb/telegraf-operator:latest
          # use IfNotPresent image pull policy to allow pushing / injecting
          # container images to Kubernetes directly (such as when using kind)
          imagePullPolicy: IfNotPresent
          args:
            # for development purposes, enable internal plugin to report
            # telegraf metrics even if no other data is available
            - --enable-default-internal-plugin=true
            # default class to use if not specified by the pod
            - --telegraf-default-class=basic
            - --telegraf-classes-directory=/config/classes
            # allow injecting telegraf-istio sidecar for pods with
            # istio sidecar annotations enabled
            #- --enable-istio-injection=true
          ports:
            - name: https
              containerPort: 9443
              protocol: TCP
          volumeMounts:
            - name: certs
              readOnly: true
              mountPath: "/etc/certs"
            - name: telegraf-operator-classes
              readOnly: true
              mountPath: "/config/classes"
      volumes:
        - name: certs
          secret:
            secretName: telegraf-operator-certs
        - name: telegraf-operator-classes
          secret:
            secretName: telegraf-operator-classes
---
apiVersion: v1
kind: Service
metadata:
  name: telegraf-operator
  namespace: telegraf-operator
  labels:
    app: telegraf-operator
spec:
  ports:
    - port: 443
      targetPort: 9443
      protocol: TCP
      name: https
  selector:
    app: telegraf-operator
